docs(config): add OpenAPI/Swagger configuration and CORS setup